deploy/scw/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sentropic-remote
  labels:
    app.kubernetes.io/name: sentropic-remote
    sentropic.dev/cloud: scaleway
